# Extract_grade_pdf_transcript

./: .gitignore  README.md  pyproject.toml
scripts/: main.py
