[tool.poetry]
name = "109030"
version = "0.1.0"
description = ""
authors = ["tang-hubert <hubert112247@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
absl-py = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
pdfplumber = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
